--- a/package.json
+++ b/package.json
@@ -12,5 +12,18 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "webpack": "^2.6.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5",
+    "pipeline-minify-css": "^1.0.1"
   }
 }
